<resources>
    <string name="app_name">MyShop</string>
    <string name="logIn">Login</string>
    <string name="emailID">Email ID</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="label_register">Dont\'t have an account?</string>
    <string name="register">Register</string>
    <string name="text_bold">bold</string>
    <string name="text_normal">normal</string>
    <string name="create_account">Create an account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="term_and_condition">I agree to the terms &amp; condition</string>
    <string name="have_account">Already an account?</string>

    <string name="error_msg_enter_first_name">Please enter first name</string>
    <string name="error_msg_enter_last_name">Please enter last name</string>
    <string name="error_msg_enter_email">Please enter email</string>
    <string name="error_msg_enter_password">Please enter password</string>
    <string name="error_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="error_msg_password_and_confirmPass">Password and confirm password don\'t match</string>
    <string name="error_msg_terms_and_condition">Please agree terms and condition</string>

    <string name="login_successfully">You are logged in successfully</string>
    <string name="user_id">User ID</string>
    <string name="email_id">Email ID</string>
    <string name="log_out">Log Out</string>

    <string name="register_successfully">Thanks for registering</string>
    <string name="please_wait">Please Wait</string>

    <string name="forgot_password_screen">Forgot Password</string>
    <string name="describe_forgot_password">Enter your username or email address. we will send you a email to reset password</string>
    <string name="submit">Submit</string>
    <string name="email_not_match">Your Email Id is Invalid.</string>
    <string name="register_success">Register is success</string>

    <string name="profile">Profile</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>

    <string name="approve_permission">You already have the permission storage</string>
    <string name="approve_permission2">The storage permission is granted</string>
    <string name="notify_user_permission">You just denied the permission for camera, you can also allow it from setting</string>

    <string name="error_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="error_msg_enter_gender">Please choose a gender</string>
    <string name="error_msg_enter_image_profile">Please choose your picture</string>

    <string name="dashboard_title">Dashboard</string>
    <string name="products_title">Products</string>
    <string name="orders_title">Orders</string>

    <string name="msg_for_exit_app">Please click again to exit app</string>

    <string name="setting">Setting</string>
    <string name="edit_setting">Edit</string>
    <string name="add_product">Add Product</string>

    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price($)</string>
    <string name="product_description">Product Description</string>
    <string name="product_quantity">Product Quantity</string>

    <string name="error_msg_enter_name_product">Please enter name product</string>
    <string name="error_msg_enter_price_product">Please enter price of product</string>
    <string name="error_msg_enter_quantity">Please enter quantity of product</string>
    <string name="error_msg_enter_image_product">Please enter image of product</string>

    <string name="hello_blank_fragment">...</string>
    <string name="title_product">Product</string>
    <string name="Quantity">Quantity</string>
    <string name="item">Items</string>

    <string name="label_no_item">No items found</string>
    <string name="message_to_delete_product">Are you sure you want \n to delete this product ?</string>
    <string name="text_delete_button">Submit</string>
    <string name="text_cancel_delete">Cancel</string>

    <string name="name_product">Product Name</string>
    <string name="description_product">Description</string>
    <string name="quantity_product">Quantity</string>

    <string name="message_add_product_to_cart">Product was added to your cart.</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="my_cart">My Cart</string>
    <string name="sub_total">Subtotal</string>
    <string name="shippingCharge">Shipping Charge</string>
    <string name="totalAmount">Total Amount</string>
    <string name="checkout">Check out</string>

    <string name="msg_cart_empty">Cart is empty</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="address">Address</string>

    <string name="full_name">Full name</string>
    <string name="phoneNumber">Phone number</string>
    <string name="address_place_holder">Address</string>
    <string name="zipCode">ZipCode</string>
    <string name="Additional_note">Additional note</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="addressList">Address List</string>
    <string name="msg_address_found">No address found</string>
    <string name="add_address">Add Address</string>

    <string name="error_msg_enter_full_name">Please enter full name</string>
    <string name="error_msg_enter_phone_number">Please enter phone number</string>
    <string name="error_msg_enter_address">Please enter address</string>
    <string name="error_msg_enter_zip_code">Please enter zip code</string>
    <string name="error_msg_enter_note">Please enter address</string>
    <string name="error_msg_enter_place">Please choose a place</string>

    <string name="add_address_title">Add Address</string>
    <string name="edit_address_title">Edit Address</string>
    <string name="check_out">Check Out</string>
    <string name="place_order">Place Order</string>
    <string name="product_item">Product Items (%1$s)</string>
    <string name="selected_address">Selected Address</string>
    <string name="items_receipt">Items Receipt</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="save_order_msg">Your order was placed successfully.</string>
    <string name="msg_out_of_stock">Out of stock</string>
    <string name="msg_out_of_stock2">Available stock is %1$s. You can not add more than stock quantity.</string>

    <string name="status_order_pending">Pending</string>
    <string name="status_order_in_progress">In progress</string>
    <string name="status_order_delivered">Delivered</string>

    <string name="no_order">No order found</string>
    <string name="my_order_detail">My order detail</string>
    <string name="order_detail">Order Details</string>
    <string name="order_id">Order ID</string>
    <string name="order_date">Order Date</string>
    <string name="order_status">Order Status</string>
    <string name="product_item_without_number">Product Items</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="total">Total: %1$s</string>
</resources>