<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.activity.MainActivity">

    <com.example.myshop.customview.NormalTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_successfully"
        android:textSize="20sp"
        app:typeText="@string/text_bold" />

    <com.example.myshop.customview.NormalTextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:textSize="16sp"
        app:typeText="@string/text_normal"
        tools:text="@string/user_id"/>

    <com.example.myshop.customview.CustomButton
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/spacing_medium"/>

</androidx.appcompat.widget.LinearLayoutCompat>