<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">

    <com.example.myshop.customview.NormalTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:typeText="@string/text_bold" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:orientation="vertical">
        <com.example.myshop.customview.CustomEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/first_name"
            style="@style/InputTextStyle"/>

        <com.example.myshop.customview.CustomEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/last_name"
            style="@style/InputTextStyle"/>

        <com.example.myshop.customview.CustomEditText
            android:id="@+id/emailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/emailID"
            style="@style/InputTextStyle"/>

        <com.example.myshop.customview.CustomEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/password"
            style="@style/InputTextStyle"/>

        <com.example.myshop.customview.CustomEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:hint="@string/confirm_password"
            style="@style/InputTextStyle"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/gray"
        android:text="@string/term_and_condition" />

    <com.example.myshop.customview.CustomButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_xl"
        android:textColor="@color/white"
        android:text="@string/register"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center">
        <com.example.myshop.customview.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"/>

        <com.example.myshop.customview.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:layout_marginStart="@dimen/spacing_small"
            app:typeText="@string/text_bold"
            app:hasUnderline="true"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>