<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/auth_screens_background">

                <com.example.myshop.customview.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:gravity="center"
                android:orientation="vertical">

                <com.example.myshop.customview.NormalTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xxl"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:text="@string/logIn"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    app:typeText="@string/text_bold" />

                <com.example.myshop.customview.CustomEditText
                    android:id="@+id/email"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_large"
                    android:hint="@string/emailID"
                    android:inputType="text"
                    android:textCursorDrawable="@drawable/bg_cursor_color"
                    android:textSize="@dimen/spacing_medium" />

                <com.example.myshop.customview.CustomEditText
                    android:id="@+id/password"
                    style="@style/InputTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textCursorDrawable="@drawable/bg_cursor_color"
                    android:textSize="@dimen/spacing_medium" />

                <com.example.myshop.customview.NormalTextView
                    android:id="@+id/forgotPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/spacing_xl"
                    android:paddingTop="@dimen/spacing_small"
                    android:text="@string/forgot_pass"
                    android:textColor="@color/gray"
                    app:typeText="@string/text_normal" />

                <com.example.myshop.customview.CustomButton
                    android:id="@+id/logIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/logIn"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xl"
                    android:orientation="horizontal">

                    <com.example.myshop.customview.NormalTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/label_register" />

                    <com.example.myshop.customview.NormalTextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacing_small"
                        android:text="@string/register"
                        app:typeText="@string/text_bold" />
                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>