<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title=" ">
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/spacing_large"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <com.example.myshop.customview.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_screen"
            android:textSize="20sp"
            android:textAllCaps="true"
            app:typeText="@string/text_bold"
            android:layout_marginTop="@dimen/spacing_xxl"
            android:layout_marginBottom="@dimen/spacing_large"/>

        <com.example.myshop.customview.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/describe_forgot_password"
            android:layout_marginBottom="@dimen/spacing_medium"/>

        <com.example.myshop.customview.CustomEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="@dimen/spacing_medium"
            android:hint="@string/emailID"
            android:textCursorDrawable="@drawable/bg_cursor_color"
            android:layout_marginBottom="@dimen/spacing_large"
            style="@style/InputTextStyle"/>

        <com.example.myshop.customview.CustomButton
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="?attr/selectableItemBackground"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>