<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_dialog"
    app:cardCornerRadius="@dimen/spacing_small"
    tools:context=".activities.fragment.DeleteDialogFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_dialog"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.myshop.customview.CustomImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/spacing_medium"
            app:srcCompat="@drawable/ic_delete" />

        <com.example.myshop.customview.NormalTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:padding="@dimen/spacing_small"
            android:text="@string/message_to_delete_product"
            android:textColor="@color/white"
            app:typeText="@string/text_bold" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_submit_button"
                android:text="@string/text_delete_button"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/text_cancel_delete"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>